// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template renders active 1`] = `"<li><a class=\\"dropdown-item active\\" href=\\"#\\">there</a></li>"`;

exports[`template renders divider 1`] = `
"<li>
  <hr class=\\"dropdown-divider\\">
</li>"
`;

exports[`template renders header 1`] = `
"<li>
  <h6 class=\\"dropdown-header\\">
    <!-- @slot Displays content inside the dropdown menu item. -->general kenobi
  </h6>
</li>"
`;

exports[`template renders label 1`] = `"<li><a class=\\"dropdown-item\\" href=\\"#\\">Hello</a></li>"`;
